# trackimo-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-release.yml  test-vps.yml  update-manifest.yml
scripts/: deploy-to-vps.js  generate-update-manifest.js  test-vps-connection.js
src/: App.tsx  DraftView.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: app.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/model/: metadata.json  model.onnx
src-tauri/src/: main.rs
src-tauri/src/champions/: cache.rs  client.rs  mod.rs
src-tauri/src/lcu/: client.rs  draft.rs  lockfile.rs  mod.rs  monitor.rs
src-tauri/src/model/: mod.rs
src/components/: Header.tsx  TitleBar.tsx  UpdateNotification.tsx
src/components/common/: ConnectionStatus.tsx  UpdateChecker.tsx
src/components/draft/: BanSlot.tsx  DraftHeader.tsx  PickCard.tsx  RecommendationsPanel.tsx  TeamView.tsx  TimerBar.tsx
src/components/player/: MatchHistory.tsx  MatchHistoryItem.tsx  PlayerDashboard.tsx  PlayerHeader.tsx  StatsPanel.tsx  WelcomeScreen.tsx  WelcomeTitle.tsx
