[package]
name = "trackimo-desktop"
version = "1.0.0"
description = "League of Legends Draft Selection Assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full", "sync"] }
dirs = "4.0"
regex = "1.10"
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
tauri-plugin-updater = "2"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

